init: setup surya

--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -6,3 +6,6 @@
 # To learn more, see https://pip.pypa.io/en/stable/reference/requirements-file-format/
 
 runpod~=1.7.0
+surya-ocr
+requests
+pillow
